Sat Jun 22 11:21:22 GMT 2013  Olly Betts <olly@survex.com>

	* common/bitstream.cc: Fix assertion in BitReader::decode().

Sat Jun 22 09:13:13 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Fix assertion failure when built with
	  --enable-assertions.  The behaviour when built without assertions
	  happened to be correct.

Fri Jun 21 13:10:53 GMT 2013  Olly Betts <olly@survex.com>

	* tests/unittest.cc: Add simple test for log2().

Fri Jun 21 13:09:09 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/log2.h,configure.ac: Add log2.h header
	  which provides an implementation of log2() if it isn't available in
	  the standard libraries.

Fri Jun 14 13:20:58 GMT 2013  Olly Betts <olly@survex.com>

	* common/fd.h: Add missing header include guards.

Fri Jun 14 13:19:44 GMT 2013  Olly Betts <olly@survex.com>

	* common/append_filename_arg.h,geospatial/geoencode.h: Fix header
	  include guard names which don't match our naming conventions.

Fri Jun 14 13:18:40 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_dbcheck.h,backends/chert/chert_dbcheck.h,
	  backends/multi/multi_alltermslist.h: Fix header include guard macro
	  names which don't match the source file names.

Fri Jun 14 12:48:14 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.h: Whitespace tweak.

Thu Jun 13 13:58:14 GMT 2013  Olly Betts <olly@survex.com>

	* backends/chert/chert_positionlist.cc: Remove 'Assert(rd);' since rd
	  is no longer a pointer.

Thu Jun 13 13:28:43 GMT 2013  Olly Betts <olly@survex.com>

	* tests/harness/utestsuite.cc: Add missing GPL boilerplate and
	  copyright statements.

Thu Jun 13 13:26:07 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Add
	  missing GPL boilerplate and copyright statements.

Thu Jun 13 13:24:34 GMT 2013  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Remove